added elizaSession page and linked to initial index page

--- a/elizaSession.html
+++ b/elizaSession.html
@@ -11,14 +11,11 @@
 
 <body>
     <div class="heading">
-        <h1>Eliza</h1>
+        <h1>ElizaSession</h1>
     </div>
 
     <div class="body" >
-        <form class="w3-container w3-margin-top" action="/elizaSession" method="POST">
-                Enter your name:<input type="text" id="userNameInput" name="username" placeholder="Name"><br/>
-                <button type="submit">Begin</button>
-        </form>
+        Chat here
     </div>  
 
     <!-- Optional JavaScript -->
