--- a/elizaSession.html
+++ b/elizaSession.html
@@ -37,6 +37,7 @@
             float: right;
             clear: both;
             margin: 5px;
+            margin-right: 10%;
         }
         #blankList {
             list-style: none
@@ -53,9 +54,6 @@
         .text-muted {
             font-size: 70%;
             text-align: center;
-        }
-        .list {
-            border-bottom: 200px;
         }
     </style>
 </head>
